# Language-Hobby

./: CMakeLists.txt  README.md  main.iil  main.lrn
Specification/: Ideas.md  Lang.md  Scopes.md
Specification/_old/: Keywords.md  Types.md  Variables.md
_old/include/: lexer.hpp  parser.hpp  tokens.hpp
_old/source/: lexer.cpp  parse_expr.cpp  parser.cpp
include/: lexer.hpp  parse_expr.hpp  parser.hpp  types.hpp
source/: CMakeLists.txt  lexer.cpp  main.cpp  parser.cpp  tokens.cpp  types.cpp
